@@ -72,4 +72,5 @@ Sources for art-work, that is included in this distribution:
  * System users icon and dialog error from SVG image from Tango Project
    icons by warszawianka
  * Info icon from SVG image uploaded by jean_victor_balin
+ * Red square error or warning icon by molumen
 all set out to Public Domain and published at http://openclipart.org
